[package]
name = "crowdloan-rewards-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
clap = "2.34.0"


frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
scale-info = { version = "1.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.130" }
rustc-hex = { version = "2.1.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

pallet-crowdloan-rewards = { path = "../frame/crowdloan-rewards", features = [], default-features = false }
subxt-clients = { path = "../utils/subxt-clients", features = [], default-features = false }
