[package]
name = "crowdloan-rewards-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
clap = "2.34.0"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [
    "derive",
] }

serde_json = "1.0.73"
serde-aux = "3.0.1"
serde = { version = "1.0.130" }

scale-info = { version = "1.0", features = ["derive"] }
rustc-hex = { version = "2.1.0" }
hex = { version = "0.4", features = ["alloc"] }

pallet-crowdloan-rewards = { package = "pallet-crowdloan-rewards", path = "../frame/crowdloan-rewards", features = [
    "std",
], default-features = false }
subxt-clients = { path = "../utils/subxt-clients" }

subxt = { git = "https://github.com/composableFi/subxt", branch = "seun-0.9.13" }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
